Fix Bug 948867 - Overlapping text in "In the news" section on home with mobile devices

--- a/media/css/mozorg/home.less
+++ b/media/css/mozorg/home.less
@@ -520,18 +520,16 @@
     }
 
     .hentry {
-        margin: 0;
+        margin: 0 0 1em;
     }
 
     .entry-title {
+        margin: 0;
+        height: 3.8em;
         font-size: 20px;
         line-height: 1.2;
         .open-sans;
     }
-}
-
-.js .extra-news .hentry {
-    height: 6em;
 }
 
 .news-buttons {
@@ -648,10 +646,6 @@
     .extra-news,
     .extra-contribute {
         .span_narrow(7);
-    }
-
-    .js .extra-news .hentry {
-        height: 7.2em;
     }
 
     .extra-download {
@@ -827,10 +821,6 @@
         margin: 0 10px @baseLine;
     }
 
-    .js .extra-news .hentry {
-        height: 8em;
-    }
-
     .extra .newsletter-form {
         width: auto;
         float: none;
@@ -903,10 +893,6 @@
     .container,
     .pillars {
         width: (@widthMobileLandscape - @gridGutterWidth);
-    }
-
-    .js .extra-news .hentry {
-        height: 7em;
     }
 
 }
